--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -20,7 +20,7 @@ The image store for the Kiwi build type is pre-defined as a file system director
 {productname} serves the image store over HTTPS from [literal]``//<SERVER-FQDN>/os-images/``.
 The image store location is unique and is not customizable.
 
-Images are stored in [path]``/srv/www/os-image/<organization-id>``.
+Images are stored in [path]``/srv/www/os-image/ORGANIZATION-ID``.
 
 
 [[at.images.docker]]
@@ -511,11 +511,11 @@ By default, the image store is located at [path]``/srv/www/os-images``.
 Image stores for Kiwi build type, used to build system, virtual, and other images, are not supported yet.
 
 ifeval::[{suma-content} == true]
-Images are always stored in [path]``/srv/www/os-images/<organization_id>`` and are accessible via HTTP/HTTPS [url]``https://<susemanager_host>/os-images/<organization_id>``.
+Images are always stored in [path]``/srv/www/os-images/ORGANIZATION-ID`` and are accessible via HTTP/HTTPS [url]``https://<susemanager_host>/os-images/ORGANIZATION-ID``.
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-Images are always stored in [path]``/srv/www/os-images/<organization_id>`` and are accessible via HTTP/HTTPS [url]``https://<uyuni_host>/os-images/<organization_id>``.
+Images are always stored in [path]``/srv/www/os-images/ORGANIZATION-ID`` and are accessible via HTTP/HTTPS [url]``https://<uyuni_host>/os-images/ORGANIZATION-ID``.
 endif::[]
 
 ====
