cont. with oracle

--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -1,10 +1,7 @@
 [[clients-oracle]]
 = Registering {oracle} Clients
 
-This section contains information about registering traditional and Salt clients running {oracle} operating systems.
-
-Traditional clients are not available on {oracle} 9 and 8.
-{oracle} 9 and {oracle} 8 clients are only supported as Salt clients.
+This section contains information about registering clients running {oracle} operating systems.
 
 ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
