--- a/modules/client-configuration/pages/clients-pubcloud.adoc
+++ b/modules/client-configuration/pages/clients-pubcloud.adoc
@@ -101,7 +101,7 @@ When the bootstrap process has completed successfully, your client is listed at 
 
 == Activation keys
 
-Activation keys are used with traditional and Salt clients to ensure that your clients have the correct software entitlements, are connecting to the appropriate channels, and are subscribed to the relevant groups.
+Activation keys are used to ensure that your clients have the correct software entitlements, are connecting to the appropriate channels, and are subscribed to the relevant groups.
 Each activation key is bound to an organization, which you can set when you create the key.
 
 For more on activation keys, see xref:client-configuration:activation-keys.adoc[].
