--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -6,7 +6,7 @@ ifeval::[{suma-content} == true]
 If you are running {rhel} clients directly, rather than using {sleses}, you need to use {redhat} sources to retrieve and update packages.
 endif::[]
 
-This section contains information about using the {redhat} content delivery network (CDN) to register Salt clients running {rhel} operating systems.
+This section contains information about using the {redhat} content delivery network (CDN) to register clients running {rhel} operating systems.
 
 For information about using {redhat} update infrastructure (RHUI) instead, see xref:client-configuration:clients-rh-rhui.adoc[].
 
@@ -108,10 +108,6 @@ This requires that you perform the import procedure three times, to create three
 .Procedure: Importing Certificates to the Server
 
 . On the {productname} Server {webui}, navigate to menu:Systems[Autoinstallation > GPG and SSL Keys].
-+
-// Maybe we  should add a screenshot, as we have at the current guide: https://documentation.suse.com/sbp/all/html/SBP-sumaforrhel/index.html#sec-import
-// Not necessary, it's pretty simple to navigate to a page. LKB
-
 . Click btn:[Create Stored Key/Cert] and set these parameters for the entitlement certificate:
 * In the [guimenu]``Description`` field, type [systemitem]``Entitlement-Cert-date``.
 * In the [guimenu]``Type`` field, select [systemitem]``SSL``.
