Revert "Add leap155 changes to uyuni-2023.10 branch (#2568)"
This reverts commit 56d0b90aed1c334eead44b4746d3d2db3dc3d0bf.

--- a/modules/client-configuration/pages/client-proxy-cli.adoc
+++ b/modules/client-configuration/pages/client-proxy-cli.adoc
@@ -1,11 +1,23 @@
 [[cli-client-proxy]]
-== Register on the Command Line
+== Register on the Command Line (Salt)
 
-// FIXME: 2023-10-24, ke: is preinstalled Salt still required?  Salt bundle?
+// Might need an 'unsupported' note? LKB 2019-05-01
+// cf. https://bugzilla.suse.com/show_bug.cgi?id=1131398
+// I'd say "no", according to the outcome of
+// https://github.com/SUSE/spacewalk/issues/9333 KE 2019-12-17
 
-Instead of the {webui}, you can use the command line to register a client to a proxy.
-This procedure requires that you have installed the Salt package on the client before registration.
+
+Instead of the {webui}, you can use the command line to register a Salt client to a proxy.
+This procedure requires that you have installed the Salt package on the Salt client before registration.
 For SLE 12 based clients, you also must have activated the [systemitem]``Advanced Systems Management`` module.
+
+[NOTE]
+====
+Registering traditional clients on the command line is also possible, but it requires more steps.
+It is not covered here.
+Use the bootstrap script procedure to register traditional clients.
+For more information, see xref:client-proxy-script.adoc[].
+====
 
 
 
