--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -2,16 +2,17 @@
 = Register Clients to a Proxy
 
 
-Proxy servers can act as a broker and package cache for clients.
+Proxy servers can act as a broker and package cache for both Salt and traditional clients.
 Registering clients to a proxy is similar to registering them directly to the {productname} Server, with a few key differences.
 
-These sections contain information on registering clients to a proxy using the {webui}, commands on the command line, or a bootstrap script.
-There are also procedures how you can move clients from one {productname} Proxy to another one or to the {productname} Server.
+These sections contain information on registering Salt clients to a proxy using the {webui}, commands on the command line, or a bootstrap script.
+There is also information on registering traditional clients using a bootstrap script.
+There are also procedure how you can move clients from one {productname} Proxy to another one or to the {productname} Server.
 
-Within the {webui}, proxy pages show information about clients.
+Within the {webui}, proxy pages show information about both Salt and traditional clients.
 You can see a list of clients that are connected to a proxy by clicking the name of the proxy in menu:Systems[System List > Proxy], then select the [guimenu]``Proxy`` subtab of the [guimenu]``Details`` tab.
 
-A list of chained proxies for a client can be seen by clicking the name of the client in menu:Systems[All], then select the [guimenu]``Connection`` subtab of the [guimenu]``Details`` tab.
+A list of chained proxies for a Salt client can be seen by clicking the name of the client in menu:Systems[All], then select the [guimenu]``Connection`` subtab of the [guimenu]``Details`` tab.
 
 
 
@@ -25,7 +26,10 @@ You cannot move chained proxies.
 Instead of moving a chained proxy, create a new proxy, move the clients, and delete the old proxy.
 ====
 
-
+[NOTE]
+====
+If you want to move a traditional client between proxies, you must repeat the registration process from the beginning.
+====
 
 .Procedure: Moving Salt or  Salt SSH Push Client between Proxies
 
@@ -41,6 +45,8 @@ Instead of moving a chained proxy, create a new proxy, move the clients, and del
 . In the {productname} {webui}, navigate to menu:Systems[System List] and check each client to move, this adds the clients to the system set manager.
 . Navigate to menu:Systems[System Set Manager], and go to the menu:Misc[Proxy]`` tab.
 . From the [guimenu]``New Proxy`` drop-down menu select the proxy you want the clients to move to, and click btn:[Change Proxy].
+
+
 
 The same functionality is also available with the [systemitem]``system.changeProxy`` API call.
 
@@ -60,7 +66,7 @@ Then the function restarts the Salt client.
 Changing [literal]``master:`` by manually editing the [path]``susemanager.conf`` file has the same effect and is supported, too.
 ====
 
-When the client restarts and reconnects via the new proxy, the server updates the proxy path in the database and schedules another action for refreshing the channel URLs.
+When the minion restarts and reconnects via the new proxy, the server updates the proxy path in the database and schedules another action for refreshing the channel URLs.
 
 
 
@@ -75,4 +81,5 @@ for refreshing the channel URLs is scheduled.
 
 If you want to move a Salt client from a proxy to the server, select [literal]``None`` from proxy list.
 
+If you want to move a traditional client to the server you must repeat the registration process from the beginning.
 
