trad. vs. salt edit

--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -1,7 +1,7 @@
 [[clients-rocky]]
 = Registering {rocky} Clients
 
-This section contains information about registering Salt clients running {rocky} operating systems.
+This section contains information about registering clients running {rocky} operating systems.
 
 ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
