remove trad. client documentation

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -1,10 +1,7 @@
 [[clients-ubuntu]]
 = Registering {ubuntu} 20.04 and 22.04 Clients
 
-This section contains information about registering Salt clients running {ubuntu} 20.04 LTS and 22.04 LTS operating systems.
-
-{ubuntu} is supported for Salt clients only.
-Traditional clients are not supported.
+This section contains information about registering clients running {ubuntu} 20.04 LTS and 22.04 LTS operating systems.
 
 ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
