--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -1,7 +1,7 @@
 [[clients-ubuntu-old]]
 = Registering {ubuntu} 18.04 Clients
 
-This section contains information about registering Salt clients running {ubuntu} 18.04 LTS operating systems.
+This section contains information about registering clients running {ubuntu} 18.04 LTS operating systems.
 
 ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
@@ -16,19 +16,16 @@ endif::[]
 
 ifeval::[{suma-content} == true]
 
-{productname} supports {ubuntu} 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
-For information about registering Salt clients running {ubuntu} 20.04 and 22.04, see xref:client-configuration:clients-ubuntu.adoc[].
+{productname} supports {ubuntu} 18.04 LTS, 20.04 LTS, and 22.04 LTS clients.
+For information about registering clients running {ubuntu} 20.04 and 22.04, see xref:client-configuration:clients-ubuntu.adoc[].
 
 endif::[]
 
 ifeval::[{uyuni-content} == true]
 
-{productname} supports {ubuntu} 18.04 LTS clients using Salt.
+{productname} supports {ubuntu} 18.04 LTS clients.
 
 endif::[]
-
-{ubuntu} is supported for Salt clients only.
-Traditional clients are not supported.
 
 Bootstrapping is supported for starting {ubuntu} clients and performing initial state runs such as setting repositories and performing profile updates.
 However, the root user on {ubuntu} is disabled by default, so to use bootstrapping, you require an existing user with [command]``sudo`` privileges for Python.
