--- a/modules/client-configuration/pages/virtualization.adoc
+++ b/modules/client-configuration/pages/virtualization.adoc
@@ -1,7 +1,7 @@
 [[virtualization]]
 = Virtualization
 
-You can use {productname} to manage virtualized clients in addition to regular traditional or Salt clients.
+You can use {productname} to manage virtualized clients.
 In this type of installation, a virtual host is installed on the {productname} Server to manage any number of virtual guests.
 If you choose to, you can install several virtual hosts to manage groups of guests.
 
