--- a/modules/client-configuration/pages/client-operations.adoc
+++ b/modules/client-configuration/pages/client-operations.adoc
@@ -1,10 +1,10 @@
 [[client.operations]]
 = Client Operations
 
-In addition to registering, upgrading, or deleting clients other operations can be performed.
+In addition to registering, upgrading, installing software, or deleting clients other operations can be performed.
 
-{productname} clients can be managed individually, or organised in groups using System Set Manager, System Groups or Configuration Management.
+{productname} clients can be managed individually, or organized in groups using System Set Manager, System Groups, or Configuration Management.
 
-You can obtain Custom System Information, manage Configuration Snapshots or power on, power off, and reboot clients using the SUSE Manager Web UI.
+You can obtain Custom System Information, power on or off, and reboot clients using the {productname} {webui}.
 
-This section contains detailed description of each of these operation.
+This section contains detailed description of each of these operations.
