Virtualization Host formular?

--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -35,6 +35,7 @@ When the bootstrap script is ready, use it to register the host with the {produc
 For more information about client registration, see xref:client-configuration:registration-overview.adoc[].
 
 // 2023-10-31, ke: still the case?  if yes, what are the requirements?
+//                 Maybe, we now should recommend to use the Virtualization Host formular?
 For Salt clients, you need to enable the [systemitem]``Virtualization Host`` entitlement.
 This allows you to see VM changes instantly.
 
