Remove traditional client documentation (virt.) (#2576)

--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -17,6 +17,9 @@ The way that you set up Xen or KVM on a VM host depends on operating system you 
 * For {suse} operating systems, see the SLES Virtualization Guide available from https://documentation.suse.com/sles/15-SP4/html/SLES-all/book-virtualization.html.
 * For {rhel} operating systems, refer to the Red Hat documentation for your version.
 
+// FIXME
+// 2023-10-31, ke: better installing one of these patterns (kvm or xen)?
+//                 package name now libvirt-daemon something?
 {productname} uses [systemitem]``libvirt`` to install and manage guests.
 You must have the [package]``libvirtd`` package installed on your host.
 In most cases, the default settings are sufficient and you do not need to adjust them.
@@ -31,6 +34,8 @@ For more on creating a bootstrap script, see xref:client-configuration:registrat
 When the bootstrap script is ready, use it to register the host with the {productname} Server.
 For more information about client registration, see xref:client-configuration:registration-overview.adoc[].
 
+// 2023-10-31, ke: still the case?  if yes, what are the requirements?
+//                 Maybe, we now should recommend to use the Virtualization Host formular?
 For Salt clients, you need to enable the [systemitem]``Virtualization Host`` entitlement.
 This allows you to see VM changes instantly.
 
