Converting shared Ansible content to snippet.

--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -63,6 +63,9 @@ For executing remediations you need to install the SCAP security guide package o
 |===
 
 
+//Procedure: Installing the SCAP security guide package
+include::snippets/install_scap_security_guide_package.adoc[]
+
 
 [[configure-ansible-inventory-files]]
 == Create Ansible inventory files
