virtualization host: use formular

--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -10,6 +10,7 @@ This section also includes information about administering virtual guests after 
 
 
 
+[[virt-xenkvm-host]]
 == Host Setup
 
 The way that you set up Xen or KVM on a VM host depends on operating system you want to use on its associated guests:
@@ -34,16 +35,16 @@ For more on creating a bootstrap script, see xref:client-configuration:registrat
 When the bootstrap script is ready, use it to register the host with the {productname} Server.
 For more information about client registration, see xref:client-configuration:registration-overview.adoc[].
 
-// 2023-10-31, ke: still the case?  if yes, what are the requirements?
-//                 Maybe, we now should recommend to use the Virtualization Host formular?
-For Salt clients, you need to enable the [systemitem]``Virtualization Host`` entitlement.
-This allows you to see VM changes instantly.
+With the [systemitem]``Virtualization Host`` formular, initialize the host:
 
-.Procedure:
+// CHECKIT: is the last step still needed?
+.Procedure: Initializing [systemitem]``Virtualization Host``
 
-. In the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the host, and click the [guimenu]``Properties`` tab.
-  Alternatively, the [systemitem]``Virtualization Host`` entitlement can be added at the registration key level.
-. In the [guimenu]``Add-On System Types`` section, check [guimenu]``Virtualization Host``, and click btn:[Update Properties] to save the changes.
+. In the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the host, and click the [guimenu]``Formulars`` tab.
+. Select the [systemitem]``Virtualization Host`` formular, and click btn:[Save].
+. Click the [systemitem]``Virtualization Host`` subtab.
+. Check the settings, and click btn:[Save Formular].
+. Apply the Highstate for the changes to take effect.
 . Restart the [systemitem]``salt-minion`` service to activate the new configuration:
 
 +
@@ -51,8 +52,14 @@ This allows you to see VM changes instantly.
 systemctl restart salt-minion
 ----
 
+////
+// FIXME: 2023-11-02, ke: Is this also stil possible? :
+Alternatively, the [systemitem]``Virtualization Host`` entitlement can be added at the registration key level.
+////
 
 
+
+[[virt-xenkvm-autoinst]]
 == Autoinstallation
 
 You can use {ay} or {kickstart} to automatically install and register Xen and KVM guests.
