--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -35,15 +35,15 @@ For more on creating a bootstrap script, see xref:client-configuration:registrat
 When the bootstrap script is ready, use it to register the host with the {productname} Server.
 For more information about client registration, see xref:client-configuration:registration-overview.adoc[].
 
-With the [systemitem]``Virtualization Host`` formular, initialize the host:
+With the [systemitem]``Virtualization Host`` formula, initialize the host:
 
 // CHECKIT: is the last step still needed?
 .Procedure: Initializing [systemitem]``Virtualization Host``
 
-. In the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the host, and click the [guimenu]``Formulars`` tab.
-. Select the [systemitem]``Virtualization Host`` formular, and click btn:[Save].
+. In the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the host, and click the [guimenu]``Formulas`` tab.
+. Select the [systemitem]``Virtualization Host`` formula, and click btn:[Save].
 . Click the [systemitem]``Virtualization Host`` subtab.
-. Check the settings, and click btn:[Save Formular].
+. Check the settings, and click btn:[Save Formula].
 . Apply the Highstate for the changes to take effect.
 . Restart the [systemitem]``salt-minion`` service to activate the new configuration:
 
