--- a/modules/client-configuration/pages/virtualization.adoc
+++ b/modules/client-configuration/pages/virtualization.adoc
@@ -28,7 +28,7 @@ For more information about using VHMs to manage virtualization, see xref:client-
 Before you begin, ensure that the client you want to use as a virtualization host has the ``Virtualization Host`` system type assigned to it.
 Both traditional and Salt clients can be used as virtual hosts.
 Navigate to menu:Systems[Systems List] and click the name of the client to use as a virtualization host.
-If the ``Virtualization Host`` system type is not listed, initialize the [systemitem]``Virtualization Host`` formular.
+If the ``Virtualization Host`` system type is not listed, initialize the [systemitem]``Virtualization Host`` formula.
 For more information, see xref:client-configuration:virt-xenkvm.adoc#virt-xenkvm-host[].
 
 // 2023-11-02, ke: is this still the case?
