Ccg trad clients snapshots #18879 (#2577)
* snapshots are trad. client only feature
* drive-by edits

--- a/modules/client-configuration/pages/client-operations.adoc
+++ b/modules/client-configuration/pages/client-operations.adoc
@@ -1,10 +1,10 @@
 [[client.operations]]
 = Client Operations
 
-In addition to registering, upgrading, or deleting clients other operations can be performed.
+In addition to registering, upgrading, installing software, or deleting clients other operations can be performed.
+{productname} clients can be managed individually or as a set of clients.
+A set of clients can grouped with System Set Manager for a one time action or permanently with System Groups.
+For advanced client configuratin options general Configuration Management is available.
+You can obtain Custom System Information, power on or off, and reboot clients using the {productname} {webui}.
 
-{productname} clients can be managed individually, or organised in groups using System Set Manager, System Groups or Configuration Management.
-
-You can obtain Custom System Information, manage Configuration Snapshots or power on, power off, and reboot clients using the SUSE Manager Web UI.
-
-This section contains detailed description of each of these operation.
+The following sections contain detailed descriptions for each of these operations.
