--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -1,5 +1,5 @@
 [[clients-ubuntu-old]]
-= Registering {ubuntu} 18.04 Clients
+= Registering {ubuntu} 18.04 clients
 
 This section contains information about registering clients running {ubuntu} 18.04 LTS operating systems.
 
@@ -14,6 +14,7 @@ ifeval::[{suma-content} == true]
 ====
 endif::[]
 
+
 ifeval::[{suma-content} == true]
 
 {productname} supports {ubuntu} 18.04 LTS, 20.04 LTS, and 22.04 LTS clients.
@@ -21,21 +22,26 @@ For information about registering clients running {ubuntu} 20.04 and 22.04, see 
 
 endif::[]
 
+
 ifeval::[{uyuni-content} == true]
 
 {productname} supports {ubuntu} 18.04 LTS clients.
+For information about registering clients running {ubuntu} 20.04 and 22.04, see xref:client-configuration:clients-ubuntu.adoc[].
 
 endif::[]
 
+
 Bootstrapping is supported for starting {ubuntu} clients and performing initial state runs such as setting repositories and performing profile updates.
 However, the root user on {ubuntu} is disabled by default, so to use bootstrapping, you require an existing user with [command]``sudo`` privileges for Python.
+
 
 [IMPORTANT]
 ====
 Canonical does not endorse or support {productname}.
 ====
 
-== Add Software Channels
+
+== Add software channels
 
 Before you register {ubuntu} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
@@ -56,13 +62,14 @@ The products you need for this procedure are:
 
 [IMPORTANT]
 ====
-When using WebUI to add Ubuntu 18.04 channels, you also need to add ubuntu-1804-amd64-main and ubuntu-1804-amd64-main-updates channels using CLI, as described in <<ubuntu-old-channels-cli-suma>>.
+When using {webui} to add {ubuntu} 18.04 channels, you also need to add ``ubuntu-1804-amd64-main`` and ``ubuntu-1804-amd64-main-updates`` channels using CLI, as described in <<ubuntu-old-channels-cli-suma>>.
 ====
 
 include::snippets/addchannels_vendor_webui.adoc[]
 
 Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
+
 
 [[ubuntu-old-channels-cli]]
 [cols="1,1", options="header"]
@@ -74,6 +81,7 @@ The channels you need for this procedure are:
 |===
 
 endif::[]
+
 
 ifeval::[{suma-content} == true]
 
@@ -109,12 +117,13 @@ The client tools channel provided by [command]``spacewalk-common-channels`` is s
 
 endif::[]
 
+
 ifeval::[{uyuni-content} == true]
 
 The channels you need for this procedure are:
 [[ubuntu-old-channels-cli-uyuni]]
 [cols="1,1", options="header"]
-.Ubuntu Channels - CLI
+.Ubuntu channels - CLI
 |===
 
 | OS Version | {ubuntu} 18.04
@@ -141,7 +150,7 @@ endif::[]
 
 
 
-== Check Synchronization Status
+== Check synchronization status
 
 ifeval::[{suma-content} == true]
 
@@ -149,13 +158,16 @@ include::snippets/check_sync_webui_suma.adoc[]
 
 endif::[]
 
+
 ifeval::[{uyuni-content} == true]
 
 include::snippets/check_sync_webui_uyuni.adoc[]
 
 endif::[]
 
+
 include::snippets/check_sync_cli.adoc[]
+
 
 [NOTE]
 ====
@@ -172,10 +184,11 @@ Synchronization can sometimes take several hours.
 
 //endif::[]
 
-== Manage GPG Keys
+== Manage GPG keys
 
 Clients use GPG keys to check the authenticity of software packages before they are installed.
 Only trusted software can be installed on clients.
+
 
 [IMPORTANT]
 ====
@@ -187,7 +200,7 @@ Because a software channel cannot be used when the GPG key is not trusted, the d
 For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
 
 
-== Root Access
+== Root access
 
 The root user on {ubuntu} is disabled by default for SSH access.
 
@@ -200,7 +213,7 @@ If the default user has been granted administrative privileges during installati
 With cloud instances this does not happen because [command]``cloud-init`` automatically creates a file under [path]``/etc/sudoers.d`` and grants privilege escalation through [command]``sudo`` without the need for a password.
 ====
 
-.Procedure: Granting Root User Access
+.Procedure: Granting root user access
 
 . On the client, edit the [filename]``sudoers`` file:
 +
@@ -224,7 +237,7 @@ We recommend that you remove the line from the [path]``sudoers`` file after the 
 
 
 
-== Register Clients
+== Register clients
 
 include::snippets/create_bootstrap_repo_register.adoc[]
 
