(HW cleanup) clients-ubuntu-old cleanup (#2580)
* Deleted very old comment related to unsupported client.

* Continuting file cleanup.

* Cont.

--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -1,10 +1,11 @@
 [[clients-ubuntu-old]]
-= Registering {ubuntu} 18.04 Clients
+= Registering {ubuntu} 18.04 clients
+
 
 This section contains information about registering clients running {ubuntu} 18.04 LTS operating systems.
 
 ifeval::[{suma-content} == true]
-// Use list format: repository URLs / packages and metadata / version info
+
 [IMPORTANT]
 ====
 * {ubuntu} 18.04 repository URLs are not available from {scc}
@@ -12,7 +13,9 @@ ifeval::[{suma-content} == true]
 * Packages and metadata are provided by Ubuntu, not by {suse}
 * For supported products, see the support table and the release notes
 ====
+
 endif::[]
+
 
 ifeval::[{suma-content} == true]
 
@@ -21,9 +24,11 @@ For information about registering clients running {ubuntu} 20.04 and 22.04, see 
 
 endif::[]
 
+
 ifeval::[{uyuni-content} == true]
 
 {productname} supports {ubuntu} 18.04 LTS clients.
+For information about registering clients running {ubuntu} 20.04 and 22.04, see xref:client-configuration:clients-ubuntu.adoc[].
 
 endif::[]
 
@@ -35,11 +40,14 @@ However, the root user on {ubuntu} is disabled by default, so to use bootstrappi
 Canonical does not endorse or support {productname}.
 ====
 
-== Add Software Channels
+
+
+== Add software channels
 
 Before you register {ubuntu} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
 include::snippets/arch-other-note.adoc[]
+
 
 ifeval::[{suma-content} == true]
 
@@ -56,20 +64,14 @@ The products you need for this procedure are:
 
 [IMPORTANT]
 ====
-When using WebUI to add Ubuntu 18.04 channels, you also need to add ubuntu-1804-amd64-main and ubuntu-1804-amd64-main-updates channels using CLI, as described in <<ubuntu-old-channels-cli-suma>>.
+When using {webui} to add {ubuntu} 18.04 channels, you also need to add ``ubuntu-1804-amd64-main`` and ``ubuntu-1804-amd64-main-updates`` channels using CLI, as described in <<ubuntu-old-channels-cli-suma>>.
 ====
-
-//[NOTE]
-//====
-//{ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
-//Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-//If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-//====
 
 include::snippets/addchannels_vendor_webui.adoc[]
 
 Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
+
 
 [[ubuntu-old-channels-cli]]
 [cols="1,1", options="header"]
@@ -80,23 +82,10 @@ The channels you need for this procedure are:
 | {ubuntu} 18.04 | ubuntu-18.04-pool-amd64
 |===
 
-//[NOTE]
-//====
-//{ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
-//Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-//If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-//====
-
 endif::[]
 
-ifeval::[{suma-content} == true]
 
-//[NOTE]
-//====
-//{ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
-//Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-//If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-//====
+ifeval::[{suma-content} == true]
 
 include::snippets/addchannels_novendor_cli.adoc[]
 
@@ -130,12 +119,13 @@ The client tools channel provided by [command]``spacewalk-common-channels`` is s
 
 endif::[]
 
+
 ifeval::[{uyuni-content} == true]
 
 The channels you need for this procedure are:
 [[ubuntu-old-channels-cli-uyuni]]
 [cols="1,1", options="header"]
-.Ubuntu Channels - CLI
+.Ubuntu channels - CLI
 |===
 
 | OS Version | {ubuntu} 18.04
@@ -151,13 +141,6 @@ The channels you need for this procedure are:
 |===
 
 
-//[NOTE]
-//====
-//{ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
-//Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-//If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-//====
-
 include::snippets/addchannels_novendor_cli.adoc[]
 
 [IMPORTANT]
@@ -169,7 +152,7 @@ endif::[]
 
 
 
-== Check Synchronization Status
+== Check synchronization status
 
 ifeval::[{suma-content} == true]
 
@@ -177,13 +160,16 @@ include::snippets/check_sync_webui_suma.adoc[]
 
 endif::[]
 
+
 ifeval::[{uyuni-content} == true]
 
 include::snippets/check_sync_webui_uyuni.adoc[]
 
 endif::[]
 
+
 include::snippets/check_sync_cli.adoc[]
+
 
 [NOTE]
 ====
@@ -193,17 +179,11 @@ Synchronization can sometimes take several hours.
 
 
 
-//ifeval::[{uyuni-content} == true]
-//== Trust GPG Keys on Clients
-
-//include::snippets/trust_gpg.adoc[]
-
-//endif::[]
-
-== Manage GPG Keys
+== Manage GPG keys
 
 Clients use GPG keys to check the authenticity of software packages before they are installed.
 Only trusted software can be installed on clients.
+
 
 [IMPORTANT]
 ====
@@ -215,7 +195,8 @@ Because a software channel cannot be used when the GPG key is not trusted, the d
 For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
 
 
-== Root Access
+
+== Root access
 
 The root user on {ubuntu} is disabled by default for SSH access.
 
@@ -227,8 +208,9 @@ This issue happens with self-installed versions of {ubuntu}.
 If the default user has been granted administrative privileges during installation time, a password is requiered to perform privilege escalation using [command]``sudo``.
 With cloud instances this does not happen because [command]``cloud-init`` automatically creates a file under [path]``/etc/sudoers.d`` and grants privilege escalation through [command]``sudo`` without the need for a password.
 ====
+i
 
-.Procedure: Granting Root User Access
+.Procedure: Granting root user access
 
 . On the client, edit the [filename]``sudoers`` file:
 +
@@ -252,7 +234,7 @@ We recommend that you remove the line from the [path]``sudoers`` file after the 
 
 
 
-== Register Clients
+== Register clients
 
 include::snippets/create_bootstrap_repo_register.adoc[]
 
