--- a/modules/administration/pages/infra-maintenance.adoc
+++ b/modules/administration/pages/infra-maintenance.adoc
@@ -1,5 +1,5 @@
 [[infra-maintenance]]
-= Infrastructure Maintenance Tasks
+= Infrastructure maintenance tasks
 
 If you work with scheduled downtime periods, you might find it difficult to remember all the things that you need to do before, during, and after that critical downtime of the {productname} Server.
 {productname} Server related systems such as Inter-Server Synchronization Slave Servers or {productname} Proxies are also affected and have to be considered.
@@ -14,6 +14,7 @@ This section contains a checklist for your downtime period, with links to furthe
 
 == Server
 
+.Procedure: Server checks
 // ke, 2019-09-30: we'll stop spacewalk during the update
 // . Stop spacewalk services.
 // You need to stop the spacewalk, SAP, and database services, along with any others you have running.
@@ -38,12 +39,17 @@ You can install updates using your package manager.
 By default, several update channels are configured and enabled for the {productname} Server.
 New and updated packages become available automatically.
 
-ifeval::[{suma-content} == true]
-To keep {susemgr} up to date, either connect it directly to {scc} or use {rmtool} (RMT).
-You can use RMT as a local installation source for disconnected environments.
-endif::[]
 
 ifeval::[{suma-content} == true]
+
+To keep {susemgr} up to date, either connect it directly to {scc} or use {rmtool} (RMT).
+You can use RMT as a local installation source for disconnected environments.
+
+endif::[]
+
+
+ifeval::[{suma-content} == true]
+
 You can check that the update channels are available on your system with this command:
 
 ----
@@ -55,26 +61,28 @@ The output looks similar to this:
 ----
 Name                                                   | Enabled | GPG Check | Refresh
 -------------------------------------------------------+---------+-----------+--------
-SLE-Module-Basesystem15-SP2-Pool                       | Yes     | (r ) Yes  | No
-SLE-Module-Basesystem15-SP2-Updates                    | Yes     | (r ) Yes  | Yes
-SLE-Module-Python2-15-SP2-Pool                         | Yes     | (r ) Yes  | No
-SLE-Module-Python2-15-SP2-Updates                      | Yes     | (r ) Yes  | Yes
-SLE-Product-SUSE-Manager-Server-4.1-Pool               | Yes     | (r ) Yes  | No
-SLE-Product-SUSE-Manager-Server-4.1-Updates            | Yes     | (r ) Yes  | Yes
-SLE-Module-SUSE-Manager-Server-4.1-Pool                | Yes     | (r ) Yes  | No
-SLE-Module-SUSE-Manager-Server-4.1-Updates             | Yes     | (r ) Yes  | Yes
-SLE-Module-Server-Applications15-SP2-Pool              | Yes     | (r ) Yes  | No
-SLE-Module-Server-Applications15-SP2-Updates           | Yes     | (r ) Yes  | Yes
-SLE-Module-Web-Scripting15-SP2-Pool                    | Yes     | (r ) Yes  | No
-SLE-Module-Web-Scripting15-SP2-Updates                 | Yes     | (r ) Yes  | Yes
+SLE-Module-Basesystem15-SP4-Pool                       | Yes     | (r ) Yes  | No
+SLE-Module-Basesystem15-SP4-Updates                    | Yes     | (r ) Yes  | Yes
+SLE-Module-Python2-15-SP4-Pool                         | Yes     | (r ) Yes  | No
+SLE-Module-Python2-15-SP4-Updates                      | Yes     | (r ) Yes  | Yes
+SLE-Product-SUSE-Manager-Server-4.3-Pool               | Yes     | (r ) Yes  | No
+SLE-Product-SUSE-Manager-Server-4.3-Updates            | Yes     | (r ) Yes  | Yes
+SLE-Module-SUSE-Manager-Server-4.3-Pool                | Yes     | (r ) Yes  | No
+SLE-Module-SUSE-Manager-Server-4.3-Updates             | Yes     | (r ) Yes  | Yes
+SLE-Module-Server-Applications15-SP4-Pool              | Yes     | (r ) Yes  | No
+SLE-Module-Server-Applications15-SP4-Updates           | Yes     | (r ) Yes  | Yes
+SLE-Module-Web-Scripting15-SP4-Pool                    | Yes     | (r ) Yes  | No
+SLE-Module-Web-Scripting15-SP4-Updates                 | Yes     | (r ) Yes  | Yes
 ----
+
 endif::[]
 
 
 ifeval::[{suma-content} == true]
+
 {productname} releases maintenance updates (MUs) to provide newer packages.
 Maintenance updates are indicated with a new version number.
-For example, the major release 4.1 is incremented to 4.1.1 when an MU is released.
+For example, the major release 4.3 is incremented to 4.3.1 when an MU is released.
 
 You can verify which version you are running by looking at the bottom of the navigation bar in the {webui}.
 You can also fetch the version number with the [literal]``api.getVersion()`` XMLRPC API call.
@@ -83,7 +91,7 @@ endif::[]
 
 
 
-=== Client Tools
+=== Client tools
 
 When the server is updated consider updating some tools on the clients, too.
 Updating [package]``salt-minion``, [package]``zypper``, and other related management package on clients is not a strict requirement, but it is a best practice in general.
@@ -94,15 +102,15 @@ To avoid this always update the [package]``salt-minion`` package when available.
 
 
 
-== Inter-Server Synchronization Slave Server
+== Inter-Server Synchronization slave server
 
-If you are using an inter-server synchronization slave server, update it after the {productname} Server update is complete.
+If you are using an Inter-Server Synchronization slave server, update it after the {productname} Server update is complete.
 
-For more in inter-server synchronization, see xref:administration:iss.adoc[].
+For more on Inter-Server Synchronization, see xref:administration:iss.adoc[].
 
 
 
-== Monitoring Server
+== Monitoring server
 
 If you are using a monitoring server for Prometheus, update it after the {productname} Server update is complete.
 
@@ -117,6 +125,10 @@ Proxies should be updated as soon as {productname} Server updates are complete.
 In general, running a proxy connected to a server on a different version is not supported.
 The only exception is for the duration of updates where it is expected that the server is updated first, so the proxy could run the previous version temporarily.
 
-Especially if you are migrating from version 4.0 to 4.1, upgrade the server first, then any proxy.
+
+[WARNING]
+====
+If you are migrating from version 4.2 to 4.3, upgrade the server first, then any proxy.
+====
 
 For more information, see xref:installation-and-upgrade:proxy-intro.adoc[].
