--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -11,7 +11,7 @@ This section also includes information about administering virtual guests after 
 
 
 [[virt-xenkvm-host]]
-== Host Setup
+== Host setup
 
 The way that you set up Xen or KVM on a VM host depends on operating system you want to use on its associated guests:
 
