--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -114,6 +114,7 @@ endif::[]
 *** xref:system-locking.adoc[System Locking]
 *** xref:configuration-management.adoc[Configuration Management]
 *** xref:power-management.adoc[Power Management]
+*** xref:snapshots.adoc[Configuration Snapshots]
 *** xref:custom-info.adoc[Custom System Information]
 *** xref:system-set-manager.adoc[System Set Manager]
 *** xref:system-groups.adoc[System Groups]
