--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -272,20 +272,20 @@ These metrics are made available by instrumentation of the Java application, com
 These exporter packages are shipped with {productname} Server:
 
 * Node exporter: [systemitem]``golang-github-prometheus-node_exporter``.
-    See https://github.com/prometheus/node_exporter.
+** See https://github.com/prometheus/node_exporter.
 * PostgreSQL exporter: [systemitem]``prometheus-postgres_exporter``.
-    See https://github.com/wrouesnel/postgres_exporter.
+** See https://github.com/wrouesnel/postgres_exporter.
 * JMX exporter: [systemitem]``prometheus-jmx_exporter``.
-    See https://github.com/prometheus/jmx_exporter.
+** See https://github.com/prometheus/jmx_exporter.
 * Apache exporter: [systemitem]``golang-github-lusitaniae-apache_exporter``.
-    See https://github.com/Lusitaniae/apache_exporter.
+** See https://github.com/Lusitaniae/apache_exporter.
 
 These exporter packages are shipped with {productname} Proxy:
 
 * Node exporter: [systemitem]``golang-github-prometheus-node_exporter``.
-    See https://github.com/prometheus/node_exporter.
+** See https://github.com/prometheus/node_exporter.
 * Squid exporter: [systemitem]``golang-github-boynux-squid_exporter``.
-    See https://github.com/boynux/squid-exporter.
+** See https://github.com/boynux/squid-exporter.
 
 The exporter packages are pre-installed in {productname} Server and Proxy, but their respective systemd daemons are disabled by default.
 
@@ -312,7 +312,7 @@ To enable self-health monitoring on a proxy, you need to manually install export
 The following relevant metrics are collected on the {productname} Server.
 
 .Server statistics (port 80)
-[cols="45,10,45"]
+[cols="40,15,45"]
 |===
 |Metric |Type | Description
 
@@ -334,7 +334,7 @@ The following relevant metrics are collected on the {productname} Server.
 |===
 
 .PostgreSQL exporter (port 9187)
-[cols="45,10,45"]
+[cols="45,15,40"]
 |===
 |Metric |Type | Description
 
@@ -372,7 +372,7 @@ The following relevant metrics are collected on the {productname} Server.
 |===
 
 .JMX exporter (Tomcat port 5556, Taskomatic port 5557)
-[cols="45,10,45"]
+[cols="45,15,40"]
 |===
 |Metric |Type | Description
 
@@ -386,7 +386,7 @@ The following relevant metrics are collected on the {productname} Server.
 |===
 
 .Server Message Queue (port 80)
-[cols="45,10,45"]
+[cols="40,15,45"]
 |===
 |Metric |Type | Description
 
@@ -408,7 +408,7 @@ The following relevant metrics are collected on the {productname} Server.
 |===
 
 .Taskomatic Scheduler (port 9800)
-[cols="45,10,45"]
+[cols="40,15,45"]
 |===
 |Metric |Type | Description
 
@@ -434,18 +434,18 @@ The packages are available from the {productname} client tools channels, and can
 These exporters can be installed on managed systems:
 
 * Node exporter: [systemitem]``golang-github-prometheus-node_exporter``.
-    See https://github.com/prometheus/node_exporter.
+** See https://github.com/prometheus/node_exporter.
 * PostgreSQL exporter: [systemitem]``prometheus-postgres_exporter``.
-    See https://github.com/wrouesnel/postgres_exporter.
+** See https://github.com/wrouesnel/postgres_exporter.
 * Apache exporter: [systemitem]``golang-github-lusitaniae-apache_exporter``.
-    See https://github.com/Lusitaniae/apache_exporter.
+** See https://github.com/Lusitaniae/apache_exporter.
 
 [NOTE]
 ====
 On {micro}, only the Node exporter and the Blackbox exporter are available.
 ====
 
-When you have the exporters installed and configured, you can start using Prometheus to collect metrics from monitored systems.
+When you have the exporters installed and configured, you can start using Prometheus to collect metrics from the monitored systems.
 If you have configured your monitoring server with the {webui}, metrics collection happens automatically.
 
 
@@ -467,8 +467,6 @@ image::monitoring_configure_formula.png[scaledwidth=80%]
 ====
 Monitoring formulas can also be configured for System Groups, by applying the same configuration used for individual systems inside the corresponding group.
 ====
-
-// The WebUI says that we describe the available arguments in the exporters formula, but I don't see it. Might be best to put it in the Salt Guide, then xref from here. --LKB 2020-08-11
 
 For more information about the monitoring formulas, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
 
